argocd-practice/slotify-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slotify-ingress
spec:
  rules:
  - host: slotify.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slotify-service
            port:
              number: 80
